# aiida-ddec

./: .gitignore  .pre-commit-config.yaml  .style.yapf  .travis.yml  Dockerfile  LICENSE  README.md  azure-pipelines.yml  conftest.py  pyproject.toml  run_tests.sh  setup.json  setup.py
.ci/azure-templates/: conda-steps.yml  pip-steps.yml
.docker/: add_ddec_extra.py  cp2k@localhost.yml  ddec-code.yml  ddec@localhost.yml
.docker/my_init.d/: add-codes.sh  add_codes.sh
.docker/opt/: add-codes.sh
.github/: check_version.py
.github/workflows/: build.yml  ci.yml  release.yml  run_examples.sh
aiida_ddec/: __init__.py
aiida_ddec/calculations/: __init__.py
aiida_ddec/parsers/: __init__.py
aiida_ddec/tests/: aiida  run_test.sh
aiida_ddec/utils/: __init__.py  workchains.py  xyzparser.py
aiida_ddec/workchains/: __init__.py  cp2k_ddec.py  cp2kmultistage_ddec.py  utils.py
aiida_ddec/workflows/: __init__.py  cp2k.py  cp2k_relax_charges.py  cp2k_sp_charges.py  utils.py
examples/: Cu-MOF-74.cif  __init__.py  cli.py  run_cp2k_ddec_Zn-MOF-74.py  run_cp2k_ddec_h2o.py  run_cp2k_relax_workflow.py  run_cp2k_sp_workflow.py  run_cp2k_workflow.py  run_cp2kmultistage_ddec_h2o.py  submit.py  test_cp2k_ddec_h2o.py
examples/data/ddec/atomic_densities/: README  c2_030_030_032_400_075.txt  c2_030_030_032_500_100.txt
examples/output/: Zn-MOF-74.cif  h2o.cif
test/: run_tests.sh
tests/: __init__.py  conftest.py  run_test.sh  test_workchains.py  water.cif
tests/data/mock-chargemol-09_26_2017-041f8174b0a0c564981ce2945120cff9/: DDEC6_even_tempered_net_atomic_charges.xyz  job_control.txt  valence_cube_DDEC_analysis.output  valence_density.cube
tests/data/mock-chargemol-09_26_2017-197013cbb6fe2c78ee1eda0a1e01de6f/: DDEC6_even_tempered_net_atomic_charges.xyz  valence_cube_DDEC_analysis.output
tests/data/mock-chargemol-09_26_2017-fb86aeb86d08019ccc4f5c292385f858/: DDEC6_even_tempered_net_atomic_charges.xyz  job_control.txt  valence_cube_DDEC_analysis.output
tests/data/mock-cp2k-7.1-244587492f289aaf1e32f7983684d96c/: aiida-ELECTRON_DENSITY-1_0.cube  aiida-RESTART.wfn  aiida.inp  aiida.out
